# DobbeAssignment

./: .gitignore  README.md  pyproject.toml  run_server.sh  server.py
DobbeFrontend/: index.html  package-lock.json  package.json
DobbeFrontend/src/: App.jsx  Dobbe.jsx  Login.jsx  Login2.jsx  Whatsapp.jsx
FastAPI_backend/: DockerFile  gemini_api.py  main.py  pyproject.toml  railway.json  requirements.txt  start.sh  supervisord.conf
FastAPI_backend/MCPServer/: client.py  database.py  logData.py  models.py  schema_change.py  seed.py  server.py  testClientSTDIO.py  testClient_sse.py  testClient_streamablehttp.py  test_url.py  url.py
FastAPI_backend/MCPServer/Email/: email_utils.py
FastAPI_backend/Server/: client.py  database.py  logData.py  models.py  seed.py  server.py  testClient_sse.py  test_url.py  url.py
FastAPI_backend/Server/Email/: email_utils.py
FastAPI_backend/Server/Google_Calender/: auth_setup.py  create_event.py
